<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ReportActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_filters"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>

        <Spinner
            android:id="@+id/spinnerNationalityFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etMinTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/min_time_hint"
                android:inputType="numberDecimal"
                android:autofillHints="none" />

            <EditText
                android:id="@+id/etMaxTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_time_hint"
                android:inputType="numberDecimal"
                android:autofillHints="none" />
        </LinearLayout>

        <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_filters_button"
            android:layout_marginBottom="16dp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvReportResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/report_results_placeholder"
                android:background="?android:attr/colorBackground"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </ScrollView>

    </LinearLayout>
</layout>
